--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1027,7 +1027,7 @@ figure.highlight,
     .code,
     .tag {
         background-color: inherit;
-        font-family: Menlo, Consolas, monospace;
+        font-family: "Input Mono", Menlo, Consolas, monospace;
         border:      none;
         padding:     0;
         margin:      0;
@@ -1090,7 +1090,7 @@ figure.highlight,
 .gist {
     .line,
     .line-number {
-        font-family: Menlo, Consolas, monospace;
+        font-family: "Input Mono", Menlo, Consolas, monospace;
         font-size:   1em;
         margin:      0 0 5px 0;
     }
