--- a/layout/_partial/mathjax.jade
+++ b/layout/_partial/mathjax.jade
@@ -1,5 +1,7 @@
 script(type='text/x-mathjax-config').
   MathJax.Hub.Config({
+    showMathMenu: false,
+    jax: ["input/TeX","output/CommonHTML"],
     tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
     });
 
