change codeblock&inlinecode style

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -284,7 +284,7 @@ div {
                 display: inline-block;
                 margin: 0 5px;
                 padding: 0 5px;
-                background: #f7f8f8;
+                // background: #f7f8f8;
             }
             a {
                 color: #01579f;
@@ -325,7 +325,7 @@ div {
                 display: inline-block;
                 margin: 0 5px;
                 padding: 0px 5px;
-                background: #f7f8f8;
+                // background: #f7f8f8;
             }
             a {
                 color: #01579f;
@@ -1010,7 +1010,7 @@ pre {
 /* syntax highlight*/
 figure.highlight,
 .codeblock {
-    background:     #f7f8f8;
+    // background:     #f7f8f8;
     margin:         10px 0;
     line-height:    1.1em;
     color:          #333;
@@ -1060,7 +1060,7 @@ figure.highlight,
     }
     // Gutter which contains line numbers
     .gutter {
-        background:   #f7f8f8;
+        // background:   #f7f8f8;
         border-right: 1px solid #e6e6e6;
         padding:      0.3em 15px;
 
